# clipzo

./: .gitignore  README.md  a.txt  package-lock.json  package.json
app/backend/: Cargo.toml  package-lock.json  package.json
app/backend/src/: handlers.rs  index.ts  main.rs  models.rs  services.rs  utils.rs
app/frontend/: package-lock.json  package.json
app/frontend/src/app/: layout.tsx  page.tsx
app/frontend/src/app/mentions/: page.tsx
app/frontend/src/app/signin/: page.tsx
app/frontend/src/components/: clipper.tsx  footer.tsx  mentions.tsx  onboarding.tsx
app/frontend/src/components/ui/: bg-gradient.tsx
app/frontend/src/lib/: auth.ts
apps/frontend/src/app/: globals.css  page.tsx
apps/frontend/src/app/api/auth/[...nextauth]/: route.ts
apps/frontend/src/app/signin/: page.tsx
apps/frontend/src/components/: footer.tsx  logs-dropdown.tsx  navbar.tsx  onboarding.tsx
apps/frontend/src/constants/: index.ts
apps/frontend/src/lib/: auth.ts
prisma/: schema.prisma
prisma/migrations/20250701223246_add_next_auth_boilerplate/: migration.sql
src/app/: globals.css  page.tsx
src/app/credits/: page.tsx
src/app/signin/: page.tsx
src/components/: clipper.tsx  footer.tsx  logo.tsx  logs-dropdown.tsx  navbar.tsx  onboarding.tsx  providers.tsx
src/components/ui/: bg-gradient.tsx  theme-toggler.tsx
